--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,8 @@
   <head>
     <style type="text/css">
       body {
-        background: black;
-        color: Red;
+        background: white;
+        color: green;
       }
       div.container {
         max-width: 500px;
