--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,8 @@
   <head>
     <style type="text/css">
       body {
-        background: white;
-        color: green;
+        background: black;
+        color: Red;
       }
       div.container {
         max-width: 500px;
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="container">
-      <h4>Hi!!!!!!!!! Welcome to Docker Container running inside  EKS Cluster - August 24th, 2023!!</h4>
+      <h4> Welcome to Docker Container running inside  EKS Cluster - August 24th, 2023!!</h4>
       <h4>Deploying Containers into AKS cluster using Azure Devops Pipelines !!!!!</h4>
       <br>
        <h4>Learning containers is really fun and awesome!!!!!</h4>
