--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
   <head>
     <style type="text/css">
       body {
-        background: yello;
+        background: green;
         color: Red;
       }
       div.container {
