--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
   <head>
     <style type="text/css">
       body {
-        background: green;
+        background: yellow;
         color: Red;
       }
       div.container {
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="container">
-      <h4> Welcome to Docker Container running inside  EKS Cluster - August 24th, 2023!!</h4>
+      <h4> Good Morning Guys!!! Welcome to Docker Container running inside  EKS Cluster - August 24th, 2023!!</h4>
       <h4>Deploying Containers into AKS cluster using Azure Devops Pipelines !!!!!</h4>
       <br>
        <h4>Learning containers is really fun and awesome!!! God Day Guys!!!!</h4>
